--- a/ticket-webapi/web/WEB-INF/web.xml
+++ b/ticket-webapi/web/WEB-INF/web.xml
@@ -3,4 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
+  <display-name>Ticket Tac</display-name>
+
+  <listener>
+    <listener-class>com.iracanyes.demo.j2ee.ticket.webapi.listener.DependencyInjectionListener</listener-class>
+  </listener>
 </web-app>
