--- a/ticket-webapp/pom.xml
+++ b/ticket-webapp/pom.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <!-- =============================================================== -->
+  <!-- Informations du projet -->
+  <!-- =============================================================== -->
+  <!-- ===== Projet Parent Maven ===== -->
   <parent>
     <artifactId>ticket</artifactId>
     <groupId>com.iracanyes.demo.j2ee</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.iracanyes.demo.j2ee</groupId>
+  <!-- ===== Informations Maven ===== -->
   <artifactId>ticket-webapp</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
+  <!-- ===== Informations générales ===== -->
   <name>ticket-webapp</name>
   <url>https://iracanyes.com/demo/j2ee/ticket</url>
 
@@ -36,7 +41,7 @@
     <maven.build.timestamp.format>dd/MM/yyyy</maven.build.timestamp.format>
     <!-- Propriété servant à contourner le bug du non remplacement
          de la propriété maven.build.timestamp lors du filtrage des ressources -->
-    <buildTimestamp>${maven.build.timestamp}</buildTimestamp>
+    <build.timestamp>${maven.build.timestamp}</build.timestamp>
   </properties>
 
   <dependencies>
@@ -100,7 +105,10 @@
       <groupId>xalan</groupId>
       <artifactId>serializer</artifactId>
     </dependency>
+
     <!-- ===== End JSTL libraries ========== -->
+
+
   </dependencies>
 
   <build>
